@@ -7,6 +7,7 @@ Changes between 3.1 and 3.2:
   * Use default charset ISO 6937 for ASCII strings
   * Add /charset= output option
   * Fix EIT schedule signaling in SDT
+  * Switch default string charset to UTF-8//IGNORE
 
 Changes between 3.0 and 3.1:
 ----------------------------
